fix: added nowrap on translation page

--- a/pages/[artistSlug]/[songSlug]/_songTranslationPage.scss
+++ b/pages/[artistSlug]/[songSlug]/_songTranslationPage.scss
@@ -13,6 +13,7 @@
     font-size: $normalText;
     margin-bottom: 5rem;
     line-height: 1.75;
+    white-space: nowrap;
   }
 
   .desktop-only-section {
